Adding Style in Class .circle-letter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,5 +85,24 @@
     padding: 20px 40px;
   }
   
+  .circle-letter {
+    position: absolute;
+    width: var(--letter-width);
+    text-align: center;
+    height: calc(var(--circle-size) + var(--letter-space));
+    left: calc(var(--circle-size) / 2 - var(--letter-width) / 2);
+    top: calc(var(--letter-space) / 2 * -1);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: var(--font-size);
+  }
   
+  .circle-letter-bottom {
+    width: var(--letter-width);
+    height: var(--letter-width);
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    transform: rotate(180deg);
+  }
   
