--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,3 +106,11 @@
     transform: rotate(180deg);
   }
   
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
